change response in api

--- a/index.html
+++ b/index.html
@@ -4,64 +4,29 @@
     <table>
         <thead>
             <tr>
-                <td colspan="3"></td>
+                <td>Drug</td>
+                <td>Full Directions</td>
             </tr>
         </thead>
         <tbody>
             <tr>
-                <td colspan="3"></td>
+                <td>Duodort Mod Realose Cap (dujastorice;tmsuin Hc)</td>
+                <td>One claily</td>
             </tr>
             <tr>
-                <td colspan="3"></td>
+                <td>FAllL Vit D 1000iu Cap (Colecalcigerol)</td>
+                <td>2 clcuXy</td>
             </tr>
             <tr>
-                <td colspan="3">10.2-1</td>
+                <td>Sozol 40mg Tab (Panto pnazoe)</td>
+                <td>One in the morning</td>
             </tr>
             <tr>
-                <td colspan="3">3311</td>
-            </tr>
-            <tr>
-                <td></td>
-                <td></td>
-                <td>1i3H1E</td>
-            </tr>
-            <tr>
-                <td>600<x<800< /td>
-                <td>2</td>
-                <td>5%</td>
-            </tr>
-            <tr>
-                <td>800<x<1000< /td>
-                <td>6</td>
-                <td>15%</td>
-            </tr>
-            <tr>
-                <td>1000<x<1200< /td>
-                <td>18</td>
-                <td>45%</td>
-            </tr>
-            <tr>
-                <td></td>
-                <td>9</td>
-                <td>22.5%</td>
-            </tr>
-            <tr>
-                <td>1400461400</td>
-                <td>3</td>
-                <td>5%</td>
-            </tr>
-            <tr>
-                <td>1600x<1800< /td>
-                <td>2</td>
-                <td></td>
-            </tr>
-            <tr>
-                <td>Ait</td>
-                <td>40</td>
-                <td>100%</td>
+                <td>3TC 3OOmg Tab (Lamivucine )</td>
+                <td>1 2x clau'Wy</td>
             </tr>
         </tbody>
     </table>
 </body>
 
-</html>
+</html
